--- a/stily.css
+++ b/stily.css
@@ -1,9 +1,9 @@
 *{
-    margin: 1;
-    padding: 0;
+    margin: 0;
+    padding: 2%;
 }
 
 .cabeçalho{
     background-color:rgba(12, 15, 45, 1);
-    ;
+    color: aliceblue;
 }
