--- a/stily.css
+++ b/stily.css
@@ -1,9 +1,15 @@
 *{
-    margin: 0;
-    padding: 2%;
+    margin: 1%;
+    padding: 1%;
 }
 
 .cabeçalho{
     background-color:rgba(12, 15, 45, 1);
     color: aliceblue;
+}
+
+.rodape{
+    background-color: rgba(19, 19, 20, 1);
+    color: aliceblue;
+
 }
